Temp fix for Hbase upgrade (I11).